--- a/Manuscripts/refs.bib
+++ b/Manuscripts/refs.bib
@@ -208,6 +208,42 @@ author = {Mandy Goldberg and Margaret A. Adgent and Danielle R. Stevens and Hele
 keywords = {Environmental chemicals, BPA, Parabens, Triclosan, Biomonitoring, Endocrine disruption}
 }
 
+
+@article{Renault2020,
+author = {Renault Christoffer Højrup,Aksglaede Lise,Wøjdemann Ditte,Hansen Anna Berg,Jensen Rikke Beck,Juul Anders,},
+title = {Minipuberty of human infancy – A window of opportunity to evaluate hypogonadism and differences of sex development?},
+journal = {Ann Pediatr Endocrinol Metab},
+volume = {25},
+number = {2},
+pages = {84-91},
+year = {2020},
+doi = {10.6065/apem.2040094.047},
+URL = {http://e-apem.org/journal/view.php?number=826},
+eprint = {http://e-apem.org/journal/view.php?number=826}
+}
+
+@ARTICLE{Lucaccioni2021,
+AUTHOR={Lucaccioni, Laura  and Trevisani, Viola  and Boncompagni, Alessandra  and Marrozzini, Lucia  and Berardi, Alberto  and Iughetti, Lorenzo },
+TITLE={Minipuberty: Looking Back to Understand Moving Forward},
+JOURNAL={Frontiers in Pediatrics},
+VOLUME={Volume 8 - 2020},
+YEAR={2021},
+URL={https://www.frontiersin.org/journals/pediatrics/articles/10.3389/fped.2020.612235},
+DOI={10.3389/fped.2020.612235},
+ISSN={2296-2360},
+}
+
+@article{Chin2023,
+title = {Early Life Anti-Müllerian Hormone Trajectories in Infant Girls},
+author = {Helen B Chin and Jenna R Krall and Mandy Goldberg and Frank Z Stanczyk and Kassa Darge and Virginia A Stallings and Walter J Rogen and David M Umbach and Donna D Baird},
+journal = {Epidemiology},
+volume = {34},
+number = {4},
+year = {2023},
+month = {7},
+doi = {10.1097/EDE.0000000000001610}
+}
+
 @article{xu2012,
    title={A regularized graph layout framework for dynamic network visualization},
    volume={27},
